@@ -1,5 +1,9 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Authentication.cs: Protect against a few NREs.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Download.aspx.cs: Add support for downloading workfiles
 	by name.
 
